--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,7 +29,7 @@ url: https://MrKaranJ.github.io
 github_username:  MrKaranJ
 
 # Build Theme and Settings
-theme: jekyll-theme-console
+remote_theme: b2a3e8/jekyll-theme-console
 style: light
 
 # Required Plugins
