Changed config file to custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ title: Karan Jayachandra
 email: mail@karanjayachandra.com
 description: >- # this means to ignore newlines until "baseurl:"
   Karan's Website
-domain: mrkaranj.github.io
-url: https://MrKaranJ.github.io
+domain: karanjayachandra.com
+url: https://www.karanjayachandra.com
 logo: /assets/logo.png
 favicon: /assets/title.png
 
