Changed the domain to include 'www'

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Karan Jayachandra
 email: mail@karanjayachandra.com
 description: >- # this means to ignore newlines until "baseurl:"
   Karan's Website
-domain: karanjayachandra.com
+domain: www.karanjayachandra.com
 url: https://www.karanjayachandra.com
 logo: /assets/logo.png
 favicon: /assets/title.png
