--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to Github Pages
 on:
   push:
     branches:
-      - gh-pages  # Here source code branch is `master`, it could be other branch
+      - main  # Here source code branch is `master`, it could be other branch
 
 jobs:
   build_and_deploy:
@@ -23,13 +23,13 @@ jobs:
       - uses: jeffreytse/jekyll-deploy-action@v0.3.1
         with:
           provider: 'github'
-          token: ${{ secrets.GITHUB_TOKEN }} # It's your Personal Access Token(PAT)
-          repository: 'KaranJayachandra / KaranJayachandra.github.io' # Default is current repository
-          branch: 'gh-pages'         # Default is gh-pages for github provider
-          jekyll_src: './'           # Default is root directory
-          jekyll_cfg: '_config.yml'  # Default is _config.yml
-          jekyll_baseurl: 'karanjayachandra.com'         # Default is according to _config.yml
-          bundler_ver: '>=0'         # Default is latest bundler version
-          cname: ''                  # Default is to not use a cname
-          actor: ''                  # Default is the GITHUB_ACTOR
-          pre_build_commands: ''     # Installing additional dependencies (Arch Linux)
+          token: ${{ secrets.GITHUB_TOKEN }}  # It's your Personal Access Token(PAT)
+          repository: ''                      # Default is current repository
+          branch: ''                          # Default is gh-pages for github provider
+          jekyll_src: './'                    # Default is root directory
+          jekyll_cfg: '_config.yml'           # Default is _config.yml
+          jekyll_baseurl: ''                  # Default is according to _config.yml
+          bundler_ver: '>=0'                  # Default is latest bundler version
+          cname: ''                           # Default is to not use a cname
+          actor: ''                           # Default is the GITHUB_ACTOR
+          pre_build_commands: ''              # Installing additional dependencies (Arch Linux)
