Added repository to the config file

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: https://www.karanjayachandra.com
 logo: /assets/logo.png
 favicon: /assets/title.png
 jekyll_baseurl: www.karanjayachandra.com
+repository: KaranJayachandra/KaranJayachandra.github.io
 
 # Build Theme and Settings
 remote_theme: KaranJayachandra/jekyll-theme-console
